Fixed premature game end due to special characters

--- a/index.html
+++ b/index.html
@@ -748,10 +748,20 @@
                 }
             }
 
+            sanitizeKey(key) {
+                if (!key) return "unknown";
+                // Firebase keys cannot contain . $ # [ ] /
+                return key.toString().replace(/[\.\$#\[\]\/]/g, '_');
+            }
+
             async addSessionPlayed(id) {
                 if (!this.roomRef || !id) return;
-                // Add to Firebase (roomCode/gameState/playedIds/ID = true)
-                await this.roomRef.child(`gameState/playedIds/${id}`).set(true);
+                try {
+                    const safeId = this.sanitizeKey(id);
+                    await this.roomRef.child(`gameState/playedIds/${safeId}`).set(true);
+                } catch (e) {
+                    console.error("Error adding played ID:", e);
+                }
             }
 
             showConnectionError() {
@@ -994,16 +1004,21 @@
                 if (!this.roomRef || !this.gameState) return;
 
                 const currentPlayerId = this.gameState.currentPlayer;
-                if (currentPlayerId !== this.playerId) return; // Not this player's turn
-                if (!this.gameState.roundActive) return; // Round not active
+                if (currentPlayerId !== this.playerId) return;
 
+                // Log the current word for this player's session summary
                 if (this.game.currentCard) {
+                    this.game.wordLog.push({
+                        word: this.game.currentCard.word,
+                        type: this.game.currentCard.type,
+                        level: this.game.currentCard.level,
+                        status: scored ? 'correct' : 'skipped'
+                    });
+
                     if (scored) {
-                        // Update score
                         const currentScore = this.players[this.playerId]?.score || 0;
                         await this.roomRef.child(`players/${this.playerId}/score`).set(currentScore + 1);
                     }
-                    // Mark current card as played
                     await this.addSessionPlayed(this.game.currentCard.id);
                 }
 
@@ -1018,7 +1033,15 @@
                 this.game.currentCard = card;
                 await this.addSessionPlayed(card.id);
 
-                await this.roomRef.child('gameState/currentCard').set(card);
+                // Update Firebase with new card and clear buzz state
+                try {
+                    await this.roomRef.child('gameState').update({
+                        currentCard: card,
+                        lastBuzz: null
+                    });
+                } catch (e) {
+                    console.error("Error updating next card:", e);
+                }
 
                 // Display card immediately
                 this.game.displayCard(card);
@@ -1074,6 +1097,15 @@
 
                 const currentPlayerId = this.gameState.currentPlayer;
                 if (currentPlayerId !== this.playerId) return;
+
+                if (this.game.currentCard) {
+                    this.game.wordLog.push({
+                        word: this.game.currentCard.word,
+                        type: this.game.currentCard.type,
+                        level: this.game.currentCard.level,
+                        status: lastCorrect ? 'correct' : 'timeout'
+                    });
+                }
 
                 if (lastCorrect && this.game.currentCard) {
                     const currentScore = this.players[this.playerId]?.score || 0;
@@ -1256,17 +1288,20 @@
                     if (buzzerContainer) buzzerContainer.classList.add('hidden');
                 }
 
-                // Show card only to active player and opposing team
+                // Show card only to active player and opposing team/opponents
                 const cardContainer = document.getElementById('card-container');
                 if (cardContainer && roundActive) {
-                    if (isMyTurn) {
+                    // Decide if current player should see the card:
+                    // 1. If it's my turn
+                    // 2. If it's team mode AND I'm on the opposing team
+                    // 3. If it's NOT team mode (3-player, etc.) AND it's NOT my turn 
+                    //    (because in free-for-all, everyone else is an opponent)
+                    const shouldSee = isMyTurn || (isTeamMode && isOpposingTeam) || (!isTeamMode && !isMyTurn);
+
+                    if (shouldSee) {
                         cardContainer.classList.remove('hidden');
                     } else {
-                        if (isTeamMode && isOpposingTeam) {
-                            cardContainer.classList.remove('hidden');
-                        } else {
-                            cardContainer.classList.add('hidden');
-                        }
+                        cardContainer.classList.add('hidden');
                     }
                 } else if (cardContainer && !roundActive) {
                     cardContainer.classList.add('hidden');
