--- a/index.html
+++ b/index.html
@@ -88,13 +88,22 @@
             color: #ef4444 !important;
         }
 
+        .no-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+
+        .no-scrollbar {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+
         @keyframes pulse {
             0% {
                 transform: scale(1);
             }
 
             50% {
-                transform: scale(1.1);
+                transform: scale(1.05);
             }
 
             100% {
@@ -224,32 +233,49 @@
     </style>
 </head>
 
-<body id="main-body" class="flex flex-col items-center justify-center p-4 pt-20 transition-colors min-h-screen">
+<body id="main-body"
+    class="flex flex-col items-center justify-start md:justify-center p-4 pt-24 transition-colors min-h-screen">
 
     <!-- HUD -->
     <div id="game-hud"
-        class="fixed top-0 left-0 w-full p-4 flex justify-between items-center z-10 opacity-0 transition-opacity pointer-events-none">
-        <div class="bg-white px-4 py-2 rounded-2xl shadow-sm border-2 border-slate-100 pointer-events-auto">
-            <span class="text-[10px] uppercase font-bold text-slate-400 block leading-none">Score</span>
-            <div id="score-display" class="text-xl font-black text-pink-500">0</div>
-        </div>
-        <div id="stack-box"
-            class="bg-white px-4 py-2 rounded-2xl shadow-sm border-2 border-slate-100 pointer-events-auto">
-            <span class="text-[10px] uppercase font-bold text-slate-400 block leading-none">Stack</span>
-            <div id="stack-display" class="text-xl font-black text-slate-700">0</div>
-        </div>
-        <div id="timer-box"
-            class="bg-white px-4 py-2 rounded-2xl shadow-sm border-2 border-slate-100 flex items-center gap-2 pointer-events-auto">
-            <span id="timer-display" class="text-xl font-black text-slate-700">60</span>
-        </div>
-        <button id="leave-game-btn" onclick="game.showLeaveGameModal()"
-            class="hidden bg-red-500 text-white px-3 py-2 rounded-2xl shadow-sm border-2 border-red-600 pointer-events-auto text-xs font-bold">
-            Leave
-        </button>
-        <div id="connection-status"
-            class="fixed bottom-4 right-4 flex items-center gap-2 bg-white/80 backdrop-blur px-3 py-1.5 rounded-full border border-slate-200 text-[10px] font-bold text-slate-400 z-50">
-            <span id="connection-dot" class="w-2 h-2 rounded-full bg-slate-300"></span>
-            <span id="connection-text">Offline</span>
+        class="fixed top-0 left-0 w-full p-2 flex justify-center items-center z-50 opacity-0 transition-opacity pointer-events-none">
+        <div
+            class="bg-white/80 backdrop-blur-md px-4 py-2 rounded-2xl shadow-lg border border-slate-200 pointer-events-auto flex items-center gap-4 max-w-full overflow-x-auto no-scrollbar">
+
+            <!-- Leave Button -->
+            <button id="leave-game-btn" onclick="game.showLeaveGameModal()"
+                class="hidden bg-slate-100 hover:bg-slate-200 text-slate-600 px-3 py-1.5 rounded-xl text-[10px] font-black uppercase transition-colors">
+                Leave
+            </button>
+
+            <div class="h-4 w-[1px] bg-slate-200 hidden" id="leave-separator"></div>
+
+            <!-- Score -->
+            <div class="flex flex-col items-center min-w-[40px]">
+                <span class="text-[8px] uppercase font-black text-slate-400 leading-none mb-1">Score</span>
+                <div id="score-display" class="text-lg font-black text-pink-500 leading-none">0</div>
+            </div>
+
+            <!-- Timer -->
+            <div id="timer-box"
+                class="flex flex-col items-center bg-slate-50 px-3 py-1 rounded-xl border border-slate-100 min-w-[50px]">
+                <span class="text-[8px] uppercase font-black text-slate-400 leading-none mb-1">Time</span>
+                <div id="timer-display" class="text-xl font-black text-slate-700 leading-none">60</div>
+            </div>
+
+            <!-- Stack -->
+            <div id="stack-box" class="flex flex-col items-center min-w-[40px]">
+                <span class="text-[8px] uppercase font-black text-slate-400 leading-none mb-1">Stack</span>
+                <div id="stack-display" class="text-lg font-black text-slate-700 leading-none">0</div>
+            </div>
+
+            <div class="h-4 w-[1px] bg-slate-200"></div>
+
+            <!-- Connection Status -->
+            <div id="connection-status" class="flex items-center gap-1.5">
+                <span id="connection-dot" class="w-2.5 h-2.5 rounded-full bg-slate-300 shadow-inner"></span>
+                <span id="connection-text" class="text-[10px] font-black text-slate-500 uppercase">Offline</span>
+            </div>
         </div>
     </div>
 
@@ -306,7 +332,6 @@
             </div>
         </div>
 
-        <!-- ACTIVE GAME SCREEN -->
         <div id="screen-game" class="hidden flex flex-col items-center">
             <div id="card-container"
                 class="w-full bg-white rounded-[2rem] shadow-xl border-4 border-pink-100 p-8 mb-8 text-center min-h-[380px] flex flex-col justify-between">
@@ -320,19 +345,42 @@
                 </div>
             </div>
 
+            <!-- Main Actions (Skip, Buzzed, Correct) -->
+            <div class="flex gap-4 w-full mb-8">
+                <button id="btn-skip" onclick="game.skipCard()"
+                    class="btn-3d flex-1 bg-slate-200 text-slate-500 py-4 rounded-2xl font-bold">
+                    Skip (1/1)
+                </button>
+                <button id="btn-buzzed" onclick="game.markBuzzed()"
+                    class="btn-3d flex-1 bg-red-500 text-white py-4 rounded-2xl font-bold hidden">
+                    Buzzed
+                </button>
+                <button onclick="game.nextCard(true)"
+                    class="btn-3d flex-[2] bg-pink-500 text-white py-4 rounded-2xl font-black text-lg">
+                    Correct! ✅
+                </button>
+            </div>
+
+            <!-- Start round button for active player -->
+            <div id="multiplayer-start-round" class="hidden w-full mb-8">
+                <button onclick="game.startMultiplayerRound()"
+                    class="btn-3d w-full bg-green-500 text-white py-4 rounded-2xl font-black text-lg">
+                    Start Your Round
+                </button>
+            </div>
+
+            <!-- Multiplayer buzzer for opposing players -->
+            <div id="multiplayer-buzzer-container" class="hidden w-full mb-8">
+                <div onmousedown="game.handleBuzzer()" class="buzzer-button">BUZZ!</div>
+                <p class="text-[10px] text-slate-400 font-bold uppercase mt-2 text-center">Buzz if you hear a taboo
+                    word!</p>
+            </div>
+
             <!-- Multiplayer turn indicator -->
             <div id="multiplayer-turn-indicator"
                 class="hidden w-full mb-4 bg-blue-50 border-2 border-blue-200 rounded-2xl p-4">
                 <div class="text-sm font-bold text-blue-700 mb-1" id="turn-indicator-text">Your turn!</div>
                 <div class="text-xs text-blue-500" id="turn-indicator-subtext"></div>
-            </div>
-
-            <!-- Start round button for active player -->
-            <div id="multiplayer-start-round" class="hidden w-full mb-4">
-                <button onclick="game.startMultiplayerRound()"
-                    class="btn-3d w-full bg-green-500 text-white py-4 rounded-2xl font-black text-lg">
-                    Start Your Round
-                </button>
             </div>
 
             <!-- Waiting for player message -->
@@ -346,28 +394,6 @@
                 class="hidden w-full mb-4 bg-white rounded-2xl p-4 border-2 border-slate-100">
                 <div class="text-xs text-slate-400 font-bold uppercase mb-2">Players</div>
                 <div id="game-players-list" class="space-y-1"></div>
-            </div>
-
-            <!-- Multiplayer buzzer for opposing players -->
-            <div id="multiplayer-buzzer-container" class="hidden w-full mb-4">
-                <div onmousedown="game.handleBuzzer()" class="buzzer-button">BUZZ!</div>
-                <p class="text-[10px] text-slate-400 font-bold uppercase mt-2 text-center">Buzz if they use a taboo
-                    word!</p>
-            </div>
-
-            <div class="flex gap-4 w-full">
-                <button id="btn-skip" onclick="game.skipCard()"
-                    class="btn-3d flex-1 bg-slate-200 text-slate-500 py-4 rounded-2xl font-bold">
-                    Skip (1/1)
-                </button>
-                <button id="btn-buzzed" onclick="game.markBuzzed()"
-                    class="btn-3d flex-1 bg-red-500 text-white py-4 rounded-2xl font-bold hidden">
-                    Buzzed
-                </button>
-                <button onclick="game.nextCard(true)"
-                    class="btn-3d flex-[2] bg-pink-500 text-white py-4 rounded-2xl font-black text-lg">
-                    Correct! ✅
-                </button>
             </div>
         </div>
 
@@ -561,7 +587,7 @@
         <div class="bg-white rounded-3xl p-8 shadow-2xl max-w-xs w-full text-center">
             <div class="text-4xl mb-4">🔔</div>
             <h3 class="text-xl font-black mb-2">Buzzer!</h3>
-            <p class="text-slate-500 mb-6 text-sm" id="buzz-modal-text">Did they get <span id="last-word-hint"
+            <p class="text-slate-500 mb-6 text-sm" id="buzz-modal-text">Did you get <span id="last-word-hint"
                     class="font-bold text-pink-500"></span> correctly?</p>
             <div class="flex gap-3">
                 <button onclick="game.handleBuzzResponse(false)"
@@ -906,7 +932,7 @@
             showConnectionError() {
                 const dot = document.getElementById('connection-dot');
                 const text = document.getElementById('connection-text');
-                if (dot) dot.className = 'w-2 h-2 rounded-full bg-red-500 animate-pulse';
+                if (dot) dot.className = 'w-2.5 h-2.5 rounded-full bg-red-500 animate-pulse';
                 if (text) text.textContent = 'Disconnected';
                 console.warn('Connection lost. Attempting to reconnect...');
             }
@@ -914,8 +940,8 @@
             hideConnectionError() {
                 const dot = document.getElementById('connection-dot');
                 const text = document.getElementById('connection-text');
-                if (dot) dot.className = 'w-2 h-2 rounded-full bg-green-500';
-                if (text) text.textContent = 'Connected';
+                if (dot) dot.className = 'w-2.5 h-2.5 rounded-full bg-green-500 shadow-[0_0_8px_rgba(34,197,94,0.5)]';
+                if (text) text.textContent = 'Online';
             }
 
             async attemptReconnect() {
@@ -1355,10 +1381,8 @@
                 const hintEl = document.getElementById('last-word-hint');
 
                 if (textEl) {
-                    const isMyTurn = this.gameState.currentPlayer === this.playerId;
-                    textEl.innerHTML = isMyTurn ?
-                        `Did you get <span id="last-word-hint" class="font-bold text-pink-500"></span> correctly?` :
-                        `Did they get <span id="last-word-hint" class="font-bold text-pink-500"></span> correctly?`;
+                    // Update: addressing player as 'you' for a more direct experience
+                    textEl.innerHTML = `Did you get <span id="last-word-hint" class="font-bold text-pink-500"></span> correctly?`;
                 }
 
                 // Re-fetch hintEl as it might have been replaced by innerHTML
@@ -1978,8 +2002,26 @@
                 });
                 const targetEl = document.getElementById('screen-' + id);
                 if (targetEl) targetEl.classList.remove('hidden');
+
                 const hud = document.getElementById('game-hud');
-                if (hud) hud.style.opacity = (id === 'game') ? '1' : '0';
+                const leaveBtn = document.getElementById('leave-game-btn');
+                const leaveSep = document.getElementById('leave-separator');
+
+                if (hud) {
+                    hud.style.opacity = (id === 'game') ? '1' : '0';
+                    hud.style.pointerEvents = (id === 'game') ? 'auto' : 'none';
+                }
+
+                // Show/hide leave button and separator based on mode and screen
+                if (leaveBtn && leaveSep) {
+                    if (this.multiplayerMode && id === 'game') {
+                        leaveBtn.classList.remove('hidden');
+                        leaveSep.classList.remove('hidden');
+                    } else {
+                        leaveBtn.classList.add('hidden');
+                        leaveSep.classList.add('hidden');
+                    }
+                }
             }
 
             // Multiplayer methods
